--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
 	<!-- CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./client/css/styles.css" rel="stylesheet">
 
 	<!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -19,13 +20,17 @@
     <!-- Created JS files-->
     <script src="./client/app.js"></script>
     <script src="./client/config.js"></script>
+    <script src="./client/views/overview/overviewController.js"></script>
+    <script src="./client/services/VoteService.js"></script>
 </head>
 <body>
 	<!-- Navigation Bar -->
 	<div ng-include="'./client/views/navbar/navbar.html'"></div>
-	<h1>Hello Work</h1>
+	
 	<!-- Home Page -->
-	<div></div>
+	<div class="container" ng-controller="OverviewController">
+		<div ng-view="'./client/views/overview/overview.html'"></div>
+	</div>
 
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
