--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,26 @@
 
 	<!-- CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/semantic-ui/2.1.8/components/grid.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/container.min.css">
 	<link href="./client/css/styles.css" rel="stylesheet">
 
-	<!-- Angular -->
+	<!-- Javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- Created JS files-->
     <script src="./client/app.js"></script>
     <script src="./client/config.js"></script>
+	<script src="./client/views/bills/BillsController.js"></script>    
     <script src="./client/views/overview/overviewController.js"></script>
+    <script src="./client/views/legislators/LegislatorsController.js"></script>
+    <script src="./client/views/votes/VotesController.js"></script>
+    <script src="./client/services/BillService.js"></script>
+    <script src="./client/services/LegislatorService.js"></script>
     <script src="./client/services/VoteService.js"></script>
 </head>
 <body>
@@ -31,9 +39,5 @@
 	<div class="container" ng-controller="OverviewController">
 		<div ng-view="'./client/views/overview/overview.html'"></div>
 	</div>
-
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
