Legislator Detail Page started
—configured front-end angular route for a single legislator
—implemented route on server side to make the api call to sunlight api
—implemented basic information on the web page including picture, name,
term, birthday, and added links to social media accounts

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 
 	<!-- CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/semantic-ui/2.1.8/components/grid.min.css">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/container.min.css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="./client/css/styles.css" rel="stylesheet">
 
 	<!-- Javascript -->
@@ -26,6 +25,7 @@
 	<script src="./client/views/bills/BillsController.js"></script>    
     <script src="./client/views/overview/overviewController.js"></script>
     <script src="./client/views/legislators/LegislatorsController.js"></script>
+    <script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
     <script src="./client/views/votes/VotesController.js"></script>
     <script src="./client/services/BillService.js"></script>
     <script src="./client/services/LegislatorService.js"></script>
