Refining legislators and legislator detail
—Modified the legislator service in the back end to ask only for fields
we are using
—Made the index.html container-fluid for better spacing
—Discovered how the checkboxes were actually bound and fixed it to set
the automatic checked value to false
—Created methods to allow groups of checkboxes to be deselected at once
—Changed the legislators page to have the filter as a sidebar
—Made the legislator detail page have all the details of interest for
each legislator
—Modified the legislator detail controller to have the ability to
calculate a legislator’s age and to display seniority in the senate or
the district a rep represents
—Hooked up the legislator detail controller to the back end

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 	<div ng-include="'./client/views/navbar/navbar.html'"></div>
 	
 	<!-- Home Page -->
-	<div class="container" ng-controller="OverviewController">
+	<div class="container-fluid" ng-controller="OverviewController">
 		<div ng-view="'./client/views/overview/overview.html'"></div>
 	</div>
 </body>
