--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script src="./client/views/overview/overviewController.js"></script>
     <script src="./client/views/legislators/LegislatorsController.js"></script>
     <script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
+    <script src="./client/views/billDetail/BillDetailController.js"></script>
     <script src="./client/views/votes/VotesController.js"></script>
     <script src="./client/services/BillService.js"></script>
     <script src="./client/services/LegislatorService.js"></script>
