Votes, Bills, and Legislators
—Created back end service for votes
—Added method to back end Legislator Service to retrieve bills a
legislator sponsors and cosponsors
—Updated Bill Service api call for current session bills to get only
information that is displayed on the ui
—Created the voteDetail html page and corresponding controller
—Updated legislators page to use Foundation 6 grid
—Updated VoteService in angular

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <script src="./client/views/legislators/LegislatorsController.js"></script>
     <script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
     <script src="./client/views/billDetail/BillDetailController.js"></script>
+    <script src="./client/views/voteDetail/VoteDetailController.js"></script>
     <script src="./client/views/votes/VotesController.js"></script>
     <script src="./client/services/BillService.js"></script>
     <script src="./client/services/LegislatorService.js"></script>
