--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,29 @@
     <script src="./client/services/VoteService.js"></script>
 </head>
 <body>
-	<!-- Navigation Bar -->
-	<div ng-include="'./client/views/navbar/navbar.html'"></div>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-contents" aria-expanded="false">
+			    <span class="sr-only">Toggle navigation</span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="#">MyPolitics</a>
+			</div>
+
+			
+			<div class="collapse navbar-collapse" id="navbar-contents">
+			  <ul class="nav navbar-nav">
+			    <li><a href="#/legislators">Legislators</a></li>
+			    <li><a href="#/votes">Votes</a></li>
+			    <li><a href="#/bills">Bills</a></li>
+			  </ul>
+			</div>
+		</div>
+	</nav>
 	
 	<!-- Home Page -->
 	<div class="container-fluid" ng-controller="OverviewController">
