--- a/public/index.html
+++ b/public/index.html
@@ -8,35 +8,41 @@
 	<title>My Politics</title>
 
 	<!-- CSS -->
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="./client/css/styles.css" rel="stylesheet">
 
 	<!-- Javascript -->
 	<script type="text/javascript" src="./client/fusioncharts-suite-xt/js/fusioncharts.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./client/js/angular-fusioncharts.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
     <!-- Created JS files-->
-    <script src="./client/app.js"></script>
-    <script src="./client/config.js"></script>
+	<script src="./client/app.js"></script>
+	<script src="./client/config.js"></script>
 	<script src="./client/views/bills/BillsController.js"></script>    
-    <script src="./client/views/overview/overviewController.js"></script>
-    <script src="./client/views/legislators/LegislatorsController.js"></script>
-    <script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
-    <script src="./client/views/billDetail/BillDetailController.js"></script>
-    <script src="./client/views/voteDetail/VoteDetailController.js"></script>
-    <script src="./client/views/votes/VotesController.js"></script>
-    <script src="./client/services/BillService.js"></script>
-    <script src="./client/services/LegislatorService.js"></script>
-    <script src="./client/services/VoteService.js"></script>
+	<script src="./client/views/overview/overviewController.js"></script>
+	<script src="./client/views/legislators/LegislatorsController.js"></script>
+	<script src="./client/views/legislators/LegislatorsFilterDialogController.js"></script>
+	<script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
+	<script src="./client/views/billDetail/BillDetailController.js"></script>
+	<script src="./client/views/voteDetail/VoteDetailController.js"></script>
+	<script src="./client/views/votes/VotesController.js"></script>
+	<script src="./client/services/BillService.js"></script>
+	<script src="./client/services/LegislatorService.js"></script>
+	<script src="./client/services/VoteService.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top" id="popupContainer">
 		<div class="container-fluid">
 			
 			<div class="navbar-header">
