--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 	<title>My Politics</title>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+	<link href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 	<link href="./client/css/styles.css" rel="stylesheet">
 
 	<!-- Javascript -->
-	<script type="text/javascript" src="./client/fusioncharts-suite-xt/js/fusioncharts.js"></script>
+	<script src="./client/fusioncharts-suite-xt/js/fusioncharts.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
@@ -23,7 +23,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="./client/js/angular-fusioncharts.min.js"></script>
+	<script src="./client/js/angular-fusioncharts.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
     <!-- Created JS files-->
@@ -34,12 +34,14 @@
 	<script src="./client/views/legislators/LegislatorsController.js"></script>
 	<script src="./client/views/legislators/LegislatorsFilterDialogController.js"></script>
 	<script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
+	<script src="./client/views/filters/FiltersController.js"></script>
 	<script src="./client/views/billDetail/BillDetailController.js"></script>
 	<script src="./client/views/voteDetail/VoteDetailController.js"></script>
 	<script src="./client/views/votes/VotesController.js"></script>
 	<script src="./client/services/BillService.js"></script>
 	<script src="./client/services/LegislatorService.js"></script>
 	<script src="./client/services/VoteService.js"></script>
+	<script src="./client/services/FilterService.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top" id="popupContainer">
@@ -55,7 +57,6 @@
 			  <a class="navbar-brand" href="#">MyPolitics</a>
 			</div>
 
-			
 			<div class="collapse navbar-collapse" id="navbar-contents">
 			  <ul class="nav navbar-nav">
 			    <li><a href="#/legislators">Legislators</a></li>
