--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 	<script src="./client/views/bills/BillsController.js"></script>    
 	<script src="./client/views/overview/overviewController.js"></script>
 	<script src="./client/views/legislators/LegislatorsController.js"></script>
-	<script src="./client/views/legislators/LegislatorsFilterDialogController.js"></script>
+	<script src="./client/views/filters/FilterDialogController.js"></script>
 	<script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
 	<script src="./client/views/filters/FiltersController.js"></script>
 	<script src="./client/views/billDetail/BillDetailController.js"></script>
@@ -54,7 +54,7 @@
 			    <span class="icon-bar"></span>
 			    <span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="#">MyPolitics</a>
+			  <a class="navbar-brand" href="#/home">My Politics</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="navbar-contents">
@@ -68,7 +68,7 @@
 	</nav>
 	
 	<!-- Home Page -->
-	<div class="container-fluid" ng-controller="OverviewController">
+	<div ng-controller="OverviewController">
 		<div ng-view="'./client/views/overview/overview.html'"></div>
 	</div>
 </body>
