--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 	<script src="./client/services/FilterService.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top" id="popupContainer">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
 			
 			<div class="navbar-header">
