--- a/public/index.html
+++ b/public/index.html
@@ -38,37 +38,19 @@
 	<script src="./client/views/billDetail/BillDetailController.js"></script>
 	<script src="./client/views/voteDetail/VoteDetailController.js"></script>
 	<script src="./client/views/votes/VotesController.js"></script>
+	<script src="./client/views/header/HeaderController.js"></script>
 	<script src="./client/services/BillService.js"></script>
 	<script src="./client/services/LegislatorService.js"></script>
 	<script src="./client/services/VoteService.js"></script>
 	<script src="./client/services/FilterService.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container-fluid">
-			
-			<div class="navbar-header">
-			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-contents" aria-expanded="false">
-			    <span class="sr-only">Toggle navigation</span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-			  </button>
-			  <a class="navbar-brand" href="#/home">My Politics</a>
-			</div>
-
-			<div class="collapse navbar-collapse" id="navbar-contents">
-			  <ul class="nav navbar-nav">
-			    <li><a href="#/legislators">Legislators</a></li>
-			    <li><a href="#/votes">Votes</a></li>
-			    <li><a href="#/bills">Bills</a></li>
-			  </ul>
-			</div>
-		</div>
-	</nav>
+	<div ng-controller="HeaderController as model">
+		<div ng-include="'./client/views/header/header.html'"></div>
+	</div>
 	
 	<!-- Home Page -->
-	<div ng-controller="OverviewController">
+	<div ng-controller="OverviewController as model">
 		<div ng-view="'./client/views/overview/overview.html'"></div>
 	</div>
 </body>
