Incorporated Bootstrap 4 alpha!
Finally solved mobile rendering issue

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
 	<title>My Politics</title>
 
 	<!-- CSS -->
-	<!-- <link href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css" rel="stylesheet"> -->
-	<!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"> -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-	<!-- <link href="./client/css/styles.css" rel="stylesheet"> -->
+	<link href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+	<link href="./client/css/bootstrap.css" rel="stylesheet">
+	<link href="./client/css/styles.css" rel="stylesheet">
 
 	<!-- Javascript -->
 	<script src="./client/fusioncharts-suite-xt/js/fusioncharts.js"></script>
@@ -22,7 +22,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="./client/js/bootstrap.min.js"></script>
 	<script src="./client/js/angular-fusioncharts.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
