Implemented Modal Dialog for Sort on Mobile View
-Added Sort Dialog for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 	<script src="./client/views/filters/FilterDialogController.js"></script>
 	<script src="./client/views/legislatorDetail/LegislatorDetailController.js"></script>
 	<script src="./client/views/filters/FiltersController.js"></script>
+	<script src="./client/views/sorters/SortDialogController.js"></script>
 	<script src="./client/views/billDetail/BillDetailController.js"></script>
 	<script src="./client/views/voteDetail/VoteDetailController.js"></script>
 	<script src="./client/views/votes/VotesController.js"></script>
